--- a/portfolio.html
+++ b/portfolio.html
@@ -59,8 +59,8 @@
     <div class="st-height-b100 st-height-lg-b80"></div>
     <div class="container">
       <div class="st-section-heading st-style1">
-        <h4 class="st-section-heading-title">PORTFOLIO</h4>
-        <h2 class="st-section-heading-subtitle">Logo Design</h2>
+        <h4 class="st-section-heading-title">LOGO DESIGN</h4>
+        <h2 class="st-section-heading-subtitle">Services</h2>
       </div>
       <div class="st-height-b25 st-height-lg-b25"></div>
     </div>
